add browwer api
