# docs/swagger.yaml
@@ -14,6 +14,13 @@ definitions:
           $ref: '#/definitions/genprotos.BookRes'
         type: array
     type: object
+  genprotos.AllBorrowers:
+    properties:
+      borrowers:
+        items:
+          $ref: '#/definitions/genprotos.BorrowerRes'
+        type: array
+    type: object
   genprotos.AllGenres:
     properties:
       Genres:
@@ -61,11 +68,46 @@ definitions:
       title:
         type: string
     type: object
+  genprotos.BorrowerReq:
+    properties:
+      book_id:
+        type: string
+      borrow_date:
+        type: string
+      return_date:
+        type: string
+      user_id:
+        type: string
+    type: object
+  genprotos.BorrowerRes:
+    properties:
+      book:
+        $ref: '#/definitions/genprotos.BookRes'
+      borrow_date:
+        type: string
+      id:
+        type: string
+      return_date:
+        type: string
+      user:
+        $ref: '#/definitions/genprotos.UserRes'
+    type: object
   genprotos.Genre:
     properties:
       id:
         type: string
       name:
+        type: string
+    type: object
+  genprotos.UserRes:
+    properties:
+      email:
+        type: string
+      id:
+        type: string
+      password:
+        type: string
+      user_name:
         type: string
     type: object
 host: localhost:8081
@@ -346,6 +388,132 @@ paths:
       summary: Update Book
       tags:
       - Book
+  /borrower/create:
+    post:
+      consumes:
+      - application/json
+      description: Create page
+      parameters:
+      - description: Create
+        in: body
+        name: Create
+        required: true
+        schema:
+          $ref: '#/definitions/genprotos.BorrowerReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Create Successful
+          schema:
+            type: string
+        "401":
+          description: Error while Created
+          schema:
+            type: string
+      summary: Create Borrower
+      tags:
+      - Borrower
+  /borrower/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete page
+      parameters:
+      - description: Borrower ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Delete Successful
+          schema:
+            type: string
+        "401":
+          description: Error while Deleted
+          schema:
+            type: string
+      summary: Delete Borrower
+      tags:
+      - Borrower
+  /borrower/get/{id}:
+    get:
+      consumes:
+      - application/json
+      description: GetById page
+      parameters:
+      - description: Borrower ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: GetById Successful
+          schema:
+            $ref: '#/definitions/genprotos.BorrowerRes'
+        "401":
+          description: Error while GetByIdd
+          schema:
+            type: string
+      summary: GetById Borrower
+      tags:
+      - Borrower
+  /borrower/getall:
+    get:
+      consumes:
+      - application/json
+      description: GetAll page
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: GetAll Successful
+          schema:
+            $ref: '#/definitions/genprotos.AllBorrowers'
+        "401":
+          description: Error while GetAlld
+          schema:
+            type: string
+      summary: GetAll Borrower
+      tags:
+      - Borrower
+  /borrower/update/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Update page
+      parameters:
+      - description: Borrower ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update
+        in: body
+        name: Update
+        required: true
+        schema:
+          $ref: '#/definitions/genprotos.BorrowerRes'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Update Successful
+          schema:
+            type: string
+        "401":
+          description: Error while updated
+          schema:
+            type: string
+      summary: Update Borrower
+      tags:
+      - Borrower
   /genre/create:
     post:
       consumes:
